Revert "Fix categories alignment text overflow (long langs)"
This reverts commit 8bb801f766c382273f8eb46418fbb90017c9483e.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -669,7 +669,6 @@ select {
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
-    max-width: 285px;
 }
 
 .side-menu .collectible,
